@@ -45,15 +45,14 @@ LABEL \
     org.label-schema.version=$VERSION
 
 RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive && \
     apt-get install -y \
-    software-properties-common apt-transport-https curl git\
-    make python3-pip && \
+    software-properties-common apt-transport-https curl git python3-pip && \
     update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1 && \
     pip install setuptools && \
     git clone "https://github.com/pdssp/planet_crs_registry.git" && \
     cd planet_crs_registry && \
     export API_TEST=True &&\
-    pip install --upgrade h11==0.8.* && \
     make && \
     mkdir -p /conf && \
     cp planet_crs_registry/conf/planet_crs_registry.conf /conf/
