@@ -1,4 +1,14 @@
-### Fix methods due to the new version of fastapi Closes #5 - use httpx instead of http3 (HEAD -> main)
+### Add a script to monitor performances Update dockerfile (HEAD -> main)
+>Mon, 22 May 2023 16:43:10 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix methods due to the new version of fastapi Closes #5 - use httpx instead of http3 (origin/main, origin/HEAD)
 >Mon, 22 May 2023 15:09:11 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -18,7 +28,7 @@
 
 
 
-### Fix problem with Ctrl+c Improve quality code Add tests (tag: v0.9.3, origin/main, origin/HEAD)
+### Fix problem with Ctrl+c Improve quality code Add tests (tag: v0.9.3)
 >Sun, 16 Oct 2022 23:32:58 +0200
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
